[gd_scene load_steps=19 format=3 uid="uid://unrcujfs8sma"]

[ext_resource type="Script" path="res://Scripts/Stuff/item_collectable.gd" id="1_07pqc"]
[ext_resource type="Texture2D" uid="uid://uvk3yx13iy44" path="res://Assets/Items/184_Elite_Apple.png" id="1_m55ts"]
[ext_resource type="Texture2D" uid="uid://kwfslor2hq3o" path="res://Assets/EPIC RPG World Pack - [FREE Demo]Ancient Ruins/EPIC RPG World Pack - [FREE Demo]Ancient Ruins - Copia/Props/golden chalice 64x64-spirits.png" id="2_106jk"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5ch03"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7q58m"]
size = Vector2(34, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_27lgp"]
atlas = ExtResource("2_106jk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yukh"]
atlas = ExtResource("2_106jk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4nfh"]
atlas = ExtResource("2_106jk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aiuy"]
atlas = ExtResource("2_106jk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00gbv"]
atlas = ExtResource("2_106jk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc85q"]
atlas = ExtResource("2_106jk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2djk"]
atlas = ExtResource("2_106jk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_13kg6"]
atlas = ExtResource("2_106jk")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vlvd7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27lgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yukh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4nfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aiuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00gbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc85q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2djk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13kg6")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_346po"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_c0rxx"]
resource_name = "Spawn"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ob4jq"]
_data = {
"RESET": SubResource("Animation_346po"),
"Spawn": SubResource("Animation_c0rxx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lcpkl"]
size = Vector2(62, 70)

[node name="item_collectable" type="StaticBody2D"]
scale = Vector2(0.69, 0.69)
physics_material_override = SubResource("PhysicsMaterial_5ch03")
script = ExtResource("1_07pqc")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_m55ts")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_7q58m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vlvd7")
animation = &"Idle"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ob4jq")
}

[node name="ItemPlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPlayerDetector"]
position = Vector2(-1, 3)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_lcpkl")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="ItemPlayerDetector" to="." method="_on_item_player_detector_body_entered"]
[connection signal="body_exited" from="ItemPlayerDetector" to="." method="_on_item_player_detector_body_exited"]
